# OS-memory-simulation

./: .gitignore  CMakeCache.txt  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeLists.txt  Doxyfile.docs  MEMORY  Makefile  Memoire  README.md  cmake_install.cmake  main.c  main_test.c
config_files/: config.txt  memory.txt  proc_queue.txt
docs/: Guide du développeur.docx  ~$ide du développeur.docx
docs/html/: annotated.html  file__proc_8c_source.html  file__proc_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8c_source.html  md_README.html  memory_8c.html  memory_8c_source.html  memory_8h.html  memory_8h_source.html  menu_8c_source.html  pages.html  process_8c_source.html  process_8h_source.html  structPartition.html  structProc__Queue-members.html  structProc__Queue.html  structProcess-members.html  structProcess.html  structelt.html  structeltQueue.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
headers/: execution_modes.h  file_proc.h  memory.h  menu.h  process.h
input_files/: proc_queue.txt
src/: execution_modes.c  file_proc.c  memory.c  menu.c  process.c
